feat: add searcch scryfall not commander
